fix: useless vertical scrollbar appears

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a:active
     padding-top: 100px;
     padding-right: 10px;
     margin-left: -10px;
-    height: 100%;
+    height: 80%;
     float: left;
     position: absolute;
     background: white;
